# tamux

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md  mx-next-2-m8-working-spec-2026-04-23.md  test_output.txt
crates/amux-cli/: Cargo.toml
crates/amux-cli/src/: cli.rs  client.rs  main.rs  plugins.rs  setup_wizard.rs  update.rs
crates/amux-cli/src/client/: agent_api.rs  agent_protocol.rs  bridge_protocol.rs  bridge_runtime.rs  connection.rs  db_bridge.rs  db_protocol.rs  mod.rs  plugin_api.rs  session_ops.rs  skill_api.rs  tests.rs  tool_api.rs  workspace_api.rs
crates/amux-cli/src/commands/: common.rs  core.rs  guideline_sync.rs  guidelines.rs  mod.rs  plugins.rs  skills.rs  workspace.rs  workspace_filters.rs  workspace_format_tests.rs
crates/amux-cli/src/output/: audit.rs
crates/amux-cli/src/plugins/: helpers.rs
crates/amux-cli/src/setup_wizard/: agents.rs  flow.rs  ipc.rs  mod.rs  steps.rs  terminal_ui.rs  tests.rs  tiering.rs  types.rs  whatsapp.rs
crates/amux-cli/src/tests/: plugins.rs
crates/amux-gateway/: Cargo.toml
crates/amux-gateway/src/: discord.rs  format.rs  health.rs  ipc.rs  main.rs  router.rs  runtime.rs  slack.rs  state.rs  telegram.rs  test_support.rs
crates/amux-gateway/src/discord/: tests.rs
crates/amux-gateway/src/runtime/: tests.rs
crates/amux-gateway/src/telegram/: tests.rs
crates/amux-mcp/: Cargo.toml
crates/amux-mcp/src/: main.rs
crates/amux-mcp/src/main/: agent_tools.rs  daemon.rs  daemon_tools.rs  rpc.rs  skills.rs  tool_definitions.rs  transport.rs  utils.rs
crates/amux-protocol/: Cargo.toml
crates/amux-protocol/src/: codec.rs  config.rs  lib.rs  logging.rs  messages.rs  runtime_paths.rs  update.rs
crates/amux-protocol/src/messages/: client.rs  daemon.rs  gateway.rs  mod.rs  support.rs
crates/amux-tui/: Cargo.toml  README.md
crates/amux-tui/src/: app.rs  auth.rs  client.rs  main.rs  markup_adapter.rs  projection.rs  providers.rs  terminal_graphics.rs  test_support.rs  theme.rs  wire.rs
crates/amux-tui/src/app/: commands.rs  commands_goal_targets.rs  config_io.rs  config_io_helpers.rs  conversion.rs  events.rs  input_ops.rs  keyboard.rs  keyboard_enter.rs  mod.rs  modal_handlers.rs  modal_handlers_enter.rs  model_impl_part1.rs  model_impl_part2.rs  model_impl_part3.rs  mouse.rs  mouse_helpers.rs  render_helpers.rs  render_helpers.rs.bak  rendering.rs  settings_handlers.rs  workspace_actor_picker.rs  workspace_create.rs  workspace_create_modal.rs  workspace_create_modal_tests.rs  workspace_detail_modal_tests.rs  workspace_edit_modal.rs  workspace_edit_modal_tests.rs  workspace_history_modal.rs  workspace_review_modal.rs  workspace_review_modal_tests.rs  workspace_update.rs
crates/amux-tui/src/auth/: openai_codex_flow.rs  tests.rs
crates/amux-tui/src/client/: impl_part1.rs  impl_part2.rs  impl_part3.rs  impl_part4.rs  impl_part5.rs  mod.rs
crates/amux-tui/src/providers/: catalog.rs  context.rs  model_catalog.rs  tests.rs
crates/amux-tui/src/state/: anticipatory.rs  approval.rs  audit.rs  auth.rs  chat.rs  chat_interactions.rs  chat_types.rs  concierge.rs  config.rs  goal_mission_control.rs  goal_workspace.rs  input.rs  input_refs.rs  mod.rs  modal.rs  notifications.rs  settings.rs  sidebar.rs  spawned_tree.rs  subagents.rs  task.rs  tier.rs  workspace.rs
crates/amux-tui/src/widgets/: anticipatory.rs  approval.rs  approval_center.rs  audit_feed.rs  chat.rs  command_palette.rs  concierge.rs  concierge_loading.rs  file_preview.rs  footer.rs  goal_mission_control.rs  goal_picker.rs  goal_workspace.rs  goal_workspace_plan.rs  header.rs  image_preview.rs  landing.rs  message.rs  message_operator_question.rs  mod.rs  model_picker.rs  notifications.rs  onboarding.rs  operator_question.rs  provider_picker.rs  queued_prompts.rs  reasoning.rs  settings.rs  sidebar.rs  splash.rs  statistics.rs  subagents.rs  task_tree.rs  task_view.rs  task_view_sections.rs  thread_picker.rs  token_format.rs  tool_diff.rs  whatsapp_link.rs  work_context_view.rs  (+2 more)
crates/zorai-cli/: Cargo.toml
crates/zorai-cli/src/: cli.rs  lib.rs  main.rs  plugins.rs  update.rs
crates/zorai-cli/src/client/: agent_api.rs  agent_protocol.rs  bridge_protocol.rs  bridge_runtime.rs  connection.rs  db_bridge.rs  db_protocol.rs  plugin_api.rs  session_ops.rs  skill_api.rs  tests.rs  tool_api.rs  workspace_api.rs
crates/zorai-cli/src/commands/: common.rs  core.rs  guideline_sync.rs  guidelines.rs  mod.rs  plugins.rs  semantic.rs  skill_sync.rs  skills.rs  tools.rs  workspace.rs  workspace_filters.rs
crates/zorai-cli/src/output/: audit.rs  mod.rs  settings.rs
crates/zorai-cli/src/plugins/: helpers.rs
crates/zorai-cli/src/setup_wizard/: agents.rs  flow.rs  ipc.rs  mod.rs  steps.rs  terminal_ui.rs  tests.rs  types.rs  whatsapp.rs
crates/zorai-cli/src/tests/: plugins.rs
crates/zorai-daemon/: Cargo.toml
crates/zorai-daemon/src/: criu.rs  db_cli.rs  git.rs  governance.rs  lsp_client.rs  main.rs  network.rs  notifications.rs  orchestration.rs  osc.rs  policy.rs  policy_external.rs  pty_session.rs  sandbox.rs  scrub.rs  server.rs  session_manager.rs  snapshot.rs  state.rs  test_support.rs  validation.rs
crates/zorai-daemon/src/agent/: agent_identity.rs  agent_wakeup.rs  aline_startup.rs  anticipatory.rs  anticipatory_support.rs  authorship.rs  behavioral_events.rs  capability_tier.rs  causal_traces.rs  circuit_breaker.rs  cognitive_resonance_runtime.rs  collaboration.rs  compaction.rs  consolidation.rs  copilot_auth.rs  dispatcher.rs  dream_state_runtime.rs  embedding_indexer.rs  engine.rs  (+89 more)
crates/zorai-gateway/: Cargo.toml
crates/zorai-gateway/src/: discord.rs  format.rs  health.rs  ipc.rs  main.rs  router.rs  runtime.rs  slack.rs  state.rs  telegram.rs
crates/zorai-protocol/: Cargo.toml
crates/zorai-protocol/src/: codec.rs  config.rs  lib.rs  logging.rs  runtime_paths.rs  tool_names.rs  update.rs
crates/zorai-tui/: Cargo.toml  README.md
crates/zorai-tui/src/: auth.rs  main.rs  projection.rs  providers.rs  system_monitor.rs  terminal_graphics.rs  test_support.rs  theme.rs  update.rs  wire.rs
(+3889 files in other folders)
