[workspace]
resolver = "2"
members = [
    "crates/amux-daemon",
    "crates/amux-protocol",
    "crates/amux-cli",
    "crates/amux-gateway",
    "crates/amux-mcp",
]

[workspace.package]
version = "0.1.7"
edition = "2021"
license = "MIT"
authors = ["tamux contributors"]

[workspace.dependencies]
# Shared dependencies across the workspace
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
bincode = "1"
bytes = "1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"

# Protocol
amux-protocol = { package = "tamux-protocol", path = "crates/amux-protocol" }
