[workspace]
resolver = "2"
members = [
    "crates/amux-daemon",
    "crates/amux-shared",
    "crates/amux-protocol",
    "crates/amux-cli",
    "crates/amux-gateway",
    "crates/amux-mcp",
    "crates/amux-tui",
]

[workspace.package]
version = "0.6.6"
edition = "2021"
license = "MIT"
authors = ["tamux contributors"]

[workspace.dependencies]
# Shared dependencies across the workspace
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
bincode = "1"
bytes = "1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls", "charset"] }
tokio-stream = "0.1"
humantime = "2"
tar = "0.4"
flate2 = "1"
semver = "1"
notify-debouncer-mini = "0.7.0"
lancedb = "0.27.2"
arrow-array = "57.3.0"
arrow-schema = "57.3.0"

# Protocol
amux-shared = { package = "tamux-shared", path = "crates/amux-shared" }
amux-protocol = { package = "tamux-protocol", path = "crates/amux-protocol" }
