[package]
name = "tamux-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tamux-gateway"
path = "src/main.rs"

[dependencies]
amux-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
humantime = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
