[package]
name = "tamux-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tamux-mcp"
path = "src/main.rs"

[dependencies]
amux-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
humantime = { workspace = true }
base64 = "0.22"
serde_yaml = "0.9.34"
