[package]
name = "tamux-protocol"
version.workspace = true
edition.workspace = true

[lib]
name = "amux_protocol"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true }
dirs = "6"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
