[package]
name = "tamux-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tamux-tui"
path = "src/main.rs"

[dependencies]
amux-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }

# TUI dependencies
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
unicode-width = "0.2"
futures = { workspace = true }
ureq = { version = "3", features = ["json"] }
