[package]
name = "zorai-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "zorai"
path = "src/main.rs"

[[bin]]
name = "zoi"
path = "src/bin/zoi.rs"

[dependencies]
zorai-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
clap = { version = "4", features = ["derive"] }
humantime = { workspace = true }
base64 = "0.22"
crossterm = "0.28"
reqwest = { workspace = true, features = ["blocking"] }
tempfile = "3"

[dev-dependencies]
