[package]
name = "zorai-daemon"
version.workspace = true
edition.workspace = true

[features]
default = ["lancedb-vector"]
lancedb-vector = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema"]

[[bin]]
name = "zorai-daemon"
path = "src/main.rs"

[dependencies]
zorai-protocol = { workspace = true }
zorai-shared = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
portable-pty = "0.8"
strip-ansi-escapes = "0.2"
regex = "1"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"
sha2 = "0.10"
sysinfo = "0.30"
tree-sitter = "0.22"
tree-sitter-bash = "0.21"
walkdir = "2"
base64 = "0.22"
reqwest = { workspace = true }
tokio-stream = { workspace = true }
humantime = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
which = "7"
jsonrepair = "0.1.0"
serde_yaml = "0.9.34"
notify = "6"
notify-debouncer-mini = { workspace = true }
croner = "3"
chrono = "0.4"
jsonschema = "0.45"
semver = "1"
url = "2"
handlebars = "6.4"
percent-encoding = "2"
aes-gcm = "0.10.3"
rand = "0.8"
ring = "0.17"
oauth2 = { version = "5.0.0", default-features = false, features = ["reqwest"] }
wa-rs = "0.2.0"
wa-rs-sqlite-storage = "0.2.0"
wa-rs-tokio-transport = "0.2.0"
wa-rs-ureq-http = "0.2.0"
async-trait = "0.1.89"
qrcode = "0.14"
ureq = { version = "3", features = ["json"] }
lancedb = { workspace = true, optional = true }
arrow-array = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
tempfile = "3"

[target.'cfg(windows)'.dependencies]
interprocess = { version = "2", features = ["tokio"] }

[target.'cfg(unix)'.dependencies]
tokio = { workspace = true, features = ["net"] }
