[package]
name = "zorai-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "zorai-gateway"
path = "src/main.rs"

[dependencies]
zorai-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
humantime = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
